docs: add show and delete swagger documentation
